[gd_scene load_steps=2 format=3 uid="uid://eq1n0de42nnj"]

[ext_resource type="Script" path="res://addons/attack-timeline-plugin/attack_timeline.gd" id="1_46s26"]

[node name="AttackTimeline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46s26")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 27.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.14902, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Attack Timeline Editor"

[node name="AttackTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MainControl" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MainControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 77.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MainControl/HBoxContainer"]
custom_minimum_size = Vector2(77, 77)
layout_mode = 2
color = Color(0.956318, 0.772745, 0.850123, 1)

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/MainControl/HBoxContainer"]
custom_minimum_size = Vector2(77, 77)
layout_mode = 2
color = Color(0.956318, 0.772745, 0.850123, 1)

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/MainControl/HBoxContainer"]
custom_minimum_size = Vector2(77, 77)
layout_mode = 2
color = Color(0.956318, 0.772745, 0.850123, 1)

[node name="NoAttackSelectedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "
Select an Attack Node to Edit
"
horizontal_alignment = 1
